card overflow bug fixed

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ hr{
 }
 .cards{
     background-color: rgb(0, 0, 0);
-    border-radius: 3% 20%;
+    border-radius: 3% 20% 3% 3%;
     box-shadow: 0 0 8px  #e100ff;
 }
 .cards:hover{
